--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Then I’ve spent a year on master’s programme in mathematics at <a href="http
 <p>In 2022 I’'ve finished <a href="http://master.math.univ-paris-diderot.fr/en/annee/m2-lmfi/">Master’s in Mathematical
     Logic and Foundations of Computer Science</a> at University of Paris. Master's paper is about <a href ="/materials/algorithmic-randomness.pdf">algorithmic randomness</a>.</p>
 <div>
-My mathematical background comes with usual fields like topology, algebra and analysis, differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
+My mathematical background comes with usual fields like topology, algebra and analysis, some differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
  falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, Kolmogorov
  complexity, model theory, classical physics
 as well as a bit of <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">relativity and quantum physics</div> and computational mathematics.
@@ -58,51 +58,60 @@ as well as a bit of <div aria-label="these fields are not less mathematics than 
 
 I’ve also took few courses at <a href="http://ium.mccme.ru">Independent University of Moscow</a>. </p>
 
-Not very mathematical fields: linguistics, cryptography.
-
 
 
 <h3 id="business">Business</h3>
+Most of the time I've worked as an individual, because the balance of interest/compensation/freedom usually
+shifted against me, however in theory it's not a rule.
 
-<div>Long time ago I was a freelancer, doing some web development, maintaining cryptographic gem, creating
-proof-of-concept solutions, and even <div aria-label="could you
-think such a work is done by freelancers?" data-balloon-pos="up">writing educational <a href="#articles">articles</a> about cryptography.
-</div></div>
+<div>Long time ago I was a freelancer, doing some web development, <a href="https://github.com/randomlogin/ece">maintaining cryptographic gem</a>, creating
+  proof-of-concept solutions, tutoring general topology, and even <div aria-label="could you think such a work is done
+  by freelancers?" data-balloon-pos="up">writing educational <a href="#articles">articles</a> about cryptography.
+  </div></div>
 
-<p>As a professional mathematician with knowledge of all the intrinsic capabilities and pitfalls of the modern cryptography, it was quite straightforward to
-spend few years in the newly emergent blockchain sphere.</p>
+<p>With background in mathematics, it seemed quite straightforward to try myself in the newly emergent blockchain sphere.</p>
 
-<div>From the most recent activities, I was a <div data-balloon-pos="up" aria-label="did it for the rhyme!">CEO of an ICO</div> <a href="https://jury.online">startup</a> (though, I consider it a fail), being
+<div>In 2017 I was a <div data-balloon-pos="up" aria-label="did it for the rhyme!">CEO of an ICO</div> <a href="https://jury.online">startup</a> (though, I consider it a fail), 
 <div data-balloon-pos="up" aria-label="master of none">the jack of all trades: </div> writing the
 <a href="/materials/WP.pdf">whitepapers</a>, creating smart contracts, pitching the project at conferences 
 (<a href="https://www.youtube.com/watch?v=azlZ8EWyotg">d10e conference in Seoul</a>), organising the workflow, hiring and firing
 employees, dealing with clients, developing kyc policies, even node and server management. Still, I left in the mid 2018.
 </div>
 
-<p>During that time I was also a technical consultant/architect in a research/working group for <a href="https://array.io">another blockchain project</a> developing the ledger based on
-the <a href="https://en.bitcoinwiki.org/wiki/DPoS">DPoS</a> consensus algorithm, with Turing-complete smart contracts backward compatible with Ethereum contracts, sophisticated
+<p>During that time I was also a technical consultant/architect in a research/working group for <a href="https://github.com/arrayio">another blockchain project</a> developing the ledger based on
+the <a href="https://en.bitcoinwiki.org/wiki/DPoS">DPoS</a> consensus algorithm, with Turing-complete smart contracts
+backward compatible with Ethereum contracts, sophisticated (at that moment)
 services like built-in name service, state machine proxy, broad and delegateable account rights, and innovative funding
-<a href="#ido">approach</a>. My participation
+<a href="https://etherscan.io/address/0x03a82e40049bcab41f6207a91134f244a56b850c#code">approach</a>. My participation
 included cryptography consulting, virtual machine workflow (backward compatibility with the Ethereum smart-contracts), key
-management, economics and security from the game theory perspective. The project was backed by venture capital fund.</p>
+management, economics and security from the game theory perspective. </p>
 
-<p>I really enjoyed creating smart contracts, as they are tiny, very efficient and independent pieces of code demanding no
-library dependencies. Here are some examples:</p>
+<!-- <p>I really enjoyed creating smart contracts, as they are tiny, very efficient and independent pieces of code demanding no -->
+<!-- library dependencies. Here are some examples:</p> -->
 
-<ol>
-  <li><a href="https://etherscan.io/address/0x03a82e40049bcab41f6207a91134f244a56b850c#code">Initial Development Offering</a> <a name="ido">concept, description in the source code.</a></li>
-  <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased for Ether. The price is fixed in USD, so it’s updated via server script which pulled info from the Bitfinex exchange.</li>
-</ol>
-
-<p>In 2019 I worked as a blockchain developer for <a href="https://dexpa.io/">dexpa.io</a>, porting Ethereum smart-contracts to the <a href="https://test.ton.org/">TON</a> blockchain and communicating with <a href="https://tonlabs.io/">TON labs</a> to help them test and debug SDKs they are creating.</p>
+<!-- <ol> -->
+<!--   <li><a href="">Initial Development Offering</a> <a name="ido">concept, description in the source code.</a></li> -->
+<!--   <li><a href="https://github.com/randomlogin/hkk-crowdsale">Typical token and crowdsale contracts</a> for tokens to be purchased for Ether. The price is fixed in USD, so it’s updated via server script which pulled info from the Bitfinex exchange.</li> -->
+<!-- </ol> -->
+<!--  -->
+<p>In 2019 I worked as a blockchain developer for <a href="https://dexpa.io/">dexpa.io</a>, porting Ethereum
+  smart-contracts to the <a href="https://test.ton.org/">TON</a> blockchain and communicating with <a
+                            href="https://tonlabs.io/">TON labs</a> to help them test and debug SDKs they were creating.</p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contribution to the node and protocol. I’ve also (not solely) built public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
+<p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contributions to the
+  node and protocol. I've build a web wallet for it, and also (not solely) built public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
 
-<p>In 2021 I was mostly doing ethereum-related development. For example NFT projects: <a href="https://exponentials.art/">Exponentials</a>, <a href="https://logarithms.art/">Logarithms</a> (domains had expired, <a href="https://34.66.145.114/"> mirror</a>).</p>
+<p>Since 2021 I was mostly doing Ethereum-related development. For example NFT projects: <a
+  href="https://opensea.io/collection/exponentials">Exponentials</a>, <a
+  href="https://opensea.io/collection/logarithms">Logarithms</a>.
+
+Besides that, I mined <a href="https://gems.alphaventuredao.io/">gems</a> on GPU, wrote code to participate in sales of hyped NFTs
+(when MEV was not yet a thing), wrote API for <a href="https://www.youba.io/">hardware wallet</a>, took part in
+hackathons and tried my best with some <a href="https://legendreprf.org/">crypto-puzzles</a>(alas, no groundbreaking
+results).
     
-<p>I’m open for interesting proposals.</p>
 <h3 id="cv">Boring stuff</h3>
       <a href="/materials/cv.pdf">CV</a>
 
@@ -117,8 +126,8 @@ library dependencies. Here are some examples:</p>
       <li><a href="/materials/prng.pdf">pseudo-random number generators</a></li>
     </ul>
   </li>
-  <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a></li>
-  <li><a href="https://t.me/metatema">Things I see around</a></li>
+  <!-- <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a></li> -->
+  <!-- <li><a href="https://t.me/metatema">Things I see around</a></li> -->
 </ol>
 
 <h2 id="contacts">Contacts</h2>
