--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@ Then I’ve spent a year on master’s programme in mathematics at <a href="http
     Logic and Foundations of Computer Science</a> at University of Paris. Master's paper is about <a href ="/materials/algorithmic-randomness.pdf">algorithmic randomness</a>.</p>
 <div>
 My mathematical background comes with usual fields like topology, algebra and analysis, some differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
- falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, Kolmogorov
+ falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, cryptography, Kolmogorov
  complexity, model theory, classical physics
 as well as a bit of <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">relativity and quantum physics</div> and computational mathematics.
 </div>
 
-I’ve also took few courses at <a href="http://ium.mccme.ru">Independent University of Moscow</a>. </p>
+I’ve also took few courses at <a href="https://ium.mccme.ru/english/index.html">Independent University of Moscow</a>. </p>
 
 
 
@@ -100,15 +100,15 @@ management, economics and security from the game theory perspective. </p>
 
 <p>Later, 2019-2020 security anaylist at <a href="https://futurecomes.com/">FutureComes</a>, making security audits for web and crypto projects (wallets, exchanges and exchange services).</p>
 
-<p>I’ve been a bit involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contributions to the
-  node and protocol. I've build a web wallet for it, and also (not solely) built public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
+<p>I’ve been involved in <a href="https://handshake.org/">Handshake</a> project, with tiny contributions to the
+  node and protocol. I've built a web wallet for it, and also (not solely) built public block explorer: <a href="https://hnsnetwork.com">hnsnetwork.com</a>.</p>
 
 <p>Since 2021 I was mostly doing Ethereum-related development. For example NFT projects: <a
   href="https://opensea.io/collection/exponentials">Exponentials</a>, <a
   href="https://opensea.io/collection/logarithms">Logarithms</a>.
 
-Besides that, I mined <a href="https://gems.alphaventuredao.io/">gems</a> on GPU, wrote code to participate in sales of hyped NFTs
-(when MEV was not yet a thing), wrote API for <a href="https://www.youba.io/">hardware wallet</a>, took part in
+Besides that, I mined <a href="https://gems.alphaventuredao.io/">gems</a> on GPU; wrote code to participate in sales of hyped NFTs
+(when MEV was not yet a thing); mimicked human interaction; wrote API for <a href="https://www.youba.io/">hardware wallet</a>; took part in
 hackathons and tried my best with some <a href="https://legendreprf.org/">crypto-puzzles</a>(alas, no groundbreaking
 results).
     
@@ -126,7 +126,7 @@ results).
       <li><a href="/materials/prng.pdf">pseudo-random number generators</a></li>
     </ul>
   </li>
-  <!-- <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a></li> -->
+  <li><a href="https://www.youtube.com/channel/UCnEEmO_-Mks14AVFqlmDE1Q">Mathematics videos (Russian)</a></li>
   <!-- <li><a href="https://t.me/metatema">Things I see around</a></li> -->
 </ol>
 
