--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ employees, dealing with clients, developing kyc policies, even node and server m
 <p>During that time I was also a technical consultant/architect in a research/working group for <a href="https://github.com/arrayio">another blockchain project</a> developing the ledger based on
 the <a href="https://en.bitcoinwiki.org/wiki/DPoS">DPoS</a> consensus algorithm, with Turing-complete smart contracts
 backward compatible with Ethereum contracts, sophisticated (at that moment)
-services like built-in name service, state machine proxy, broad and delegateable account rights, and innovative funding
+services like built-in name service, state machine proxy, broad and delegateable account rights, and innovative (at that
+time) funding
 <a href="https://etherscan.io/address/0x03a82e40049bcab41f6207a91134f244a56b850c#code">approach</a>. My participation
 included cryptography consulting, virtual machine workflow (backward compatibility with the Ethereum smart-contracts), key
 management, economics and security from the game theory perspective. </p>
@@ -108,8 +109,8 @@ management, economics and security from the game theory perspective. </p>
   href="https://opensea.io/collection/logarithms">Logarithms</a>.
 
 Besides that, I mined <a href="https://gems.alphaventuredao.io/">gems</a> on GPU; wrote code to participate in sales of hyped NFTs
-(when MEV was not yet a thing); mimicked human interaction; wrote API for <a href="https://www.youba.io/">hardware wallet</a>; took part in
-hackathons and tried my best with some <a href="https://legendreprf.org/">crypto-puzzles</a>(alas, no groundbreaking
+(when MEV had not yet been a thing); mimicked human interaction; wrote API for <a href="https://www.youba.io/">hardware wallet</a>; took part in
+hackathons and tried my best with some <a href="https://legendreprf.org/">crypto-puzzles</a> (alas, no groundbreaking
 results).
     
 <h3 id="cv">Boring stuff</h3>
