--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ I’ve also took few courses at <a href="https://ium.mccme.ru/english/index.html
 
 
 <h3 id="business">Business</h3>
-Most of the time I've worked as an individual, because the balance of interest/compensation/freedom usually
-shifted against me, however in theory it's not a rule.
+<p>Most of the time I've worked as an individual, because the balance of interest/compensation/freedom usually
+  shifted against me, however in theory it's not a rule. </p>
 
 
 <div>Long time ago I was a freelancer, doing some web development, <a href="https://github.com/randomlogin/ece">maintaining cryptographic gem</a>, creating
