--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I’ve also took few courses at <a href="https://ium.mccme.ru/english/index.html
 
 <p>With background in mathematics, it seemed quite straightforward to try myself in the newly emergent blockchain sphere.</p>
 
-<div>In 2017 I was a <div data-balloon-pos="up" aria-label="did it for the rhyme!">CEO of an ICO</div> <a href="https://jury.online">startup</a> (though, I consider it a fail), 
+<div>In 2017 I was a <div data-balloon-pos="up" aria-label="did it for the rhyme!">CEO of an ICO</div>startup (though, I consider it a fail), 
 <div data-balloon-pos="up" aria-label="master of none">the jack of all trades: </div> writing the
 <a href="/materials/WP.pdf">whitepapers</a>, creating smart contracts, pitching the project at conferences 
 (<a href="https://www.youtube.com/watch?v=azlZ8EWyotg">d10e conference in Seoul</a>), organising the workflow, hiring and firing
