--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Then I’ve spent a year on master’s programme in mathematics at <a href="http
 <div>
 My mathematical background comes with usual fields like topology, algebra and analysis, some differential and algebraic geometry, <div style="display: inline" aria-label="it has nothing in common with the
  falsehood" data-balloon-pos="up">Lie theory</div>, category theory, theoretical computer science, logic, cryptography, Kolmogorov
- complexity, model theory, classical physics
+ complexity, model theory, type theory, classical physics
 as well as a bit of <div aria-label="these fields are not less mathematics than physics" data-balloon-pos="up">relativity and quantum physics</div> and computational mathematics.
 </div>
 
