--- a/index.html
+++ b/index.html
@@ -143,33 +143,44 @@ results).
 <p>My key for private communication. Only I can read the encrypted text. Just in case.</p>
 <div id="pgpKey" style="display: none">
 <pre>-----BEGIN PGP PUBLIC KEY BLOCK-----
-mQENBFXM5gMBCADI7hGTegsa7vVDZqJmmAFur6C2ejX8WuZd34+OaHbPot9N9GZc
-ScdijH/TAKgYqXOBENCaaLnqVYohth0FuTjEQOQwYNzSwRrYszEI879SwStWlxq/
-8YNNS6fhFVoBqzB0dl3yVinBGZPmLljsEMurMWStvU6jSt+Yv9LtCEgcJ/ikh4K1
-3jj92XFU4GkQtZhcQMeT/3vm6N2MToR9ibUZJUtIX6LKJY3x42o0sVGEPc5laNK4
-/sy+TbbjJwGZbUWQY3fxNJV15W+LdYCcPpIu3k+WBLt1okd6GMOsm5KTcnha52KR
-vRSA/AfMAxBARlOF5XCfmKg9lcZ27IxOaoiNABEBAAG0LEFsZXhhbmRlciBTaGV2
-dHNvdiA8cmFuZG9tbG9naW43NkBnbWFpbC5jb20+iQE+BBMBAgAoBQJVzOYDAhsD
-BQkJZgGABgsJCAcDAgYVCAIJCgsEFgIDAQIeAQIXgAAKCRBrQUWAQpELwwbXB/0c
-fm0EBkbbtYFBChJqUtFI7TRmSiSIeEyt3qNhSyrGU7EN2MrTXzrWU86uqsGnm/PB
-n9plebxPP0Tg6EGZdqwkhIDCmJCnrB+jye4KLdbT86OjzMgkiaHKoHRBC5ozqjWf
-Lv5ZxRhrJfYqAHV+ojrVAkoscj/JucJXUNHCTaYhnsAIU7cT0UoKLUQjz1hrWvgo
-78GXCtRLXjnnoUa7Y2QDt2OVNPOXrLAzkrtfF89ZR6cvaibZnQ8fCwCseg5JNHBM
-+Nst3Kb93P0cHh3L9I158Jn3J5yVYSdwuVr/GUNGRRTyIQaCkbK42/cZVN0xB7L5
-8dW34c8dt3R5b4SU2vDBuQENBFXM5gMBCADfAGZT3g/dNWq8yrPbc9HsKvi4/+KS
-hHLYOCKrbE56LByE7qG9g9dIDKwRiLYbhP4G8mfUHtlPre/5Dao6zqDeJIoUPd9U
-BsSEoxaFLJ5+uP1HpUw/CkruAPuw+H3YHS0Ls/j1IwCJKQQZAeu0K/Zjrr9gVYdT
-J1GaUVHET2RQLSkSeCLIruLxG3bVMvA0juW1EKmTI0WCRlSRbtieYTLgQ240hZrB
-Y+PtQg26dfbVHWiQb9r/SYFwr+hAiozwq96p1KlrkmkFxZFgkV9AGzZdWF6uCjw6
-8KAJZHJ7QQME2xvzWK2Y9+PKlAcMSwEnOIGJSJoHvwW4nTXJjmAi0V2pABEBAAGJ
-ASUEGAECAA8FAlXM5gMCGwwFCQlmAYAACgkQa0FFgEKRC8NA8Qf/ZGl25TmuL8jt
-pApgaaRnuRkSLyNPM8I9jYCTFDLqjeeMYJYPeeNErwEnu6dczpsDcJ8IbRBMwFlz
-Lv7GmriZ5JWps1VzTCilKX+bPog/95zyW36c6bf0hu++xuj3vtsGjD5Rvg6Y8cw+
-5CJZwRA5CBmArRkeydnlWyRliLYing4Ar2g3m44VlYm92hSqI9ST4nm40BE4tzRk
-ohFvMwyeZEQSVD2rqyrBWd3Kj7LzMkOyyg1rMcOiuXsqKbNKTVqXLWi0nlqGv5a/
-ehbhm/dHgUcmzKbagIAmpH4z3Ow5C7/7DKAED0c6yjwHw9UmYl81N1upzSQeIx6j
-2EvP/eMKog==
-=EBcx
+mQGNBGUQx+EBDADJbKopJpbtQyBtZhRs3ZBJ2yt0VQhUotC38vPRIBlgK//21UI1
+WdkOgFOAO1PKtTZ8yWNkYoPALVQzPEettnPD7tanaH3x6YvNbYDsfVLqwSmcg/vD
+e9UrQfRtnBueTI9Hnfw6PjoHw3QjPDYNUeC9NtQA6lX9M48oIZE+w4nVH+Kxfb2H
+lcuzSsvV5D9w6UjYxp4W2/vbVZshuZKNv8fhXuGhxTgApUNvQ6FdBdgmCj6hgkTy
+uD50WU+aaY4TbvOAkoyoGp9w4PkghFNVuKGPWXZtXffq7o8sPfynfj0516qNwaS/
+6qHN6Y67LRwRlvl9cb2BsE4v/G2J/+HoBXo1ClmOcLl16VTG+5XEbHp2OdeKbSQH
+d83ca2vxMeVzX9vvi6DqDDP9losl1WSpA76hKVUe2OnvfOe65lXJvl8rAB79BnCL
+SY5tJ0wS87vZvT8bT5oKjteHRD54s9QfkptfoWIutj2DnPGiIDy9L0WCdD4/QKzN
+WXq+lLsiwp9ODecAEQEAAbQsQWxleGFuZGVyIFNoZXZ0c292IDxyYW5kb21sb2dp
+bjc2QGdtYWlsLmNvbT6JAdQEEwEKAD4WIQSbPfQq9+0wGFTmvgRu/qTsEevSyQUC
+ZRDH4QIbAwUJA8JnAAULCQgHAgYVCgkICwIEFgIDAQIeAQIXgAAKCRBu/qTsEevS
+yWhgC/41r8LmIRP+7tISdWJiqMChsDG5OtIXbxxKR4JP5gJsdjRQrb3ge631Vs0z
+2XeGQvyGcPipZlYVmz75D8tx53sc/c2Ceii7Bgsd0hrdattHW5QLBQ5Zp6a/UREl
+6+PqVhA0cJnM2DHwaUdlLrFUn9APXRTTqYntEv0aryMtIzLoEwoHFTyEdQV7xjV7
+5FYjlN8kUr4pmzWQMB+ywW/nkAsr/UEM/smGHYzkfvy1HrtvETEqnqPSrk8MPLxj
+JDGp14DzO6Xn3FtHYud6BTPkSuUaQDxmCEtcSzt0LbqsG4NfeqrmQ9Z7hy6I0Gj6
+S7d14+XzYgyUE+/COKoSNbVQ5GKbjXjqOSC+oyJCNPzSe/a28RdfcfjV1Z4WRy3v
+W3zkuKXMhjQofdDKgUkSsI44gAiwkrc1OyQvTPwXJqjXFjWa+5nYAzoiFM2rrnoP
+Z2vqu3ST42l7E+BB0NMwgEqXTLfVcPXznRtAlbgKzGh7ilwkvw00iTK051Vqv+iJ
+p45dYe+5AY0EZRDH4QEMALiigycrwlvaAEgrTKT56a8D7f4vx1m2HeAT8t+cXTMH
+megD5JIZ6nCw11p4QHXxQu0XXizK+dM8zU/bwgXwQU3l1YsEtdwcosnbb9e/tPaH
+cZtfAdvpP7sWVPJbcehqcoQXp/p9YxHj6x1EnwRrr3Fd3MBfLAuN20hNBZ0RrHAG
+bLyRPAjgqxP3W3EXJjP9iro/W3xgQSqLTxsr6RQuM2LiqRva/7I8k+oqHO/7OTqG
+UK9wAIA7lrXaMwb1DKOnRsehWiySHSw51J/j+jZaCLTknEUvjSSyxIPMpqd5LL1O
+zItY3C9pKaXDh1BsSDS5xRwbZuZv3G0Jk7H5sHVGCEWWoKsyOg0dXrN2Nh02kqQV
+4jTlT/EvXVMb5NDt4YoW30CraAq6Su31uR1NjccXIECc0igMhGAPMLi6aOVUfM7V
+5y7nzW52IOxJ1W1D06twuic14toRdR7pLGwGujZjd1ovNIMu3+4wuqN5pGMJJlmH
+SLq0r9E2dbLipIGgZBDgDwARAQABiQG8BBgBCgAmFiEEmz30KvftMBhU5r4Ebv6k
+7BHr0skFAmUQx+ECGwwFCQPCZwAACgkQbv6k7BHr0smOlQv9FP8IjgvB3pxIw6dS
+76t9ssWN+w9hUOwqlSLlMTzVLCMnV3+YoL4l4m9tr148at+S6i6RslKGkajulDrm
+9pshM/moO8N0vJiNgDq3yORJsEOJa+AYeIhbmokUZdSJYnJd3gvq16n4G4y27h8z
+c4odxgaNaLibJ94xM/vAO1Oyh4j/naP7RPF2GpPtIWgqtKOZ5PoXZZ+bbG5LgWGu
+4r1KK39SRI6Ex4A0osvsJoYwzrbP5ku0JwW2MuwV/Av6cqFn67cu/pg9YG/2zdh9
+Pad3cq51GiyG4bqCv28Uet+Zo5OlZwb7bjzeK6RSFe6L8dL4R4AZ5xoIb5ZkeUQ9
+mUax82CeDuvB8S/ygU9w9QIoHeUOj2ZqrYMlbkNx1XpFGGw6qXZPPoLnb+qnYLRK
+3Ls9FT5b+iG1f8ewlmQSqqLXjOO1xOUr2lWCfhf4O/boJ6VCjS9nuf9+G+rg0nvG
+lwsdNzVwqnVT7LnoxiFVEPBPOmUdPM5NSFA6XLevANcv8lu6
+=0KOl
 -----END PGP PUBLIC KEY BLOCK-----
 </pre>
 </div>
